# mmvisual

./: .gitignore  .prettierrc  LICENSE  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
