[package]
name = "mmvisual"
version = "0.1.0"
description = "A Tauri App"
authors = ["wyzdwdz"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mmvisual_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
marvelmind = { git = "https://github.com/wyzdwdz/marvelmind-rs" }
tauri-plugin-prevent-default = "2.1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"

[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = "2.0.1"
gtk = "0.18.0"
